<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_menu">
        <item android:id="@+id/tutorial"
            android:icon="@drawable/help"
            android:title="@string/tutorial" />
        <item android:id="@+id/dowmload_path"
            android:icon="@drawable/download"
            android:title="@string/dowmload_path" />
        <item android:id="@+id/info"
            android:icon="@drawable/info"
            android:title="@string/info" />
    </group>

    <group android:id="@+id/group_menu2">
        <item android:id="@+id/some_item_id"
            android:title="@string/subtitle">
            <menu>
                <item
                    android:id="@+id/mail"
                    android:icon="@drawable/mail"
                    android:title="@string/mail" />
            </menu>
        </item>
    </group>


</menu>