<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/colorwhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:text="@string/tutorial"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4dp"
        android:padding="20dp"
        android:text="@string/contents"
        android:textColor="@color/colorblack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ok_button"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorwhite"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
